--- a/src/components/JournalForm/JournalForm.module.css
+++ b/src/components/JournalForm/JournalForm.module.css
@@ -3,17 +3,6 @@
 	flex-direction: column;
 	gap: 30px;
 }
-.input-title {
-	border: none;
-	background: none;
-	font-size: 32px;
-	font-style: normal;
-	font-weight: 600;
-	line-height: normal;
-	font-family: 'Source Sans 3', sans-serif;
-	border-bottom: 1px solid #323232;
-	width: 100%;
-}
 
 .form-label {
 	display: flex;
@@ -38,7 +27,22 @@
 	border-bottom: 1px solid #323232;
 	width: 100%;
 }
+
 .invalid {
 	border: 1px solid red;
 	background: rgb(68, 6, 6);
+}
+
+.delete {
+	border: none;
+	background: none;
+	cursor: pointer;
+	padding: 0;
+	height: 30px;
+	width: 30px;
+}
+
+.delete:hover {
+	background: rgb(255, 255, 255, 0.05);
+	border-radius: 50%;
 }
